add perms and natural

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,12 +11,16 @@
 # TreeCuter by Norbit4
 
 # github: https://github.com/Norbit4
+# website: https://n0rbit.pl
 
 # If you like the plugin, support me with a positive opinion on spigot.org, thanks! <3
 
 #---------------------------------------#
 #               [Config]                #
 #---------------------------------------#
+
+use-permissions: false
+permission: 'treecuter.use'
 
 max-tree-height: 20
 
@@ -29,6 +33,9 @@ effect-level: 2
 
 items-to-inventory: false
 
+# automatically plants saplings that lie on the ground!
+auto-plant: true
+
 accept-tools:
   - 'WOODEN_AXE'
   - 'STONE_AXE'
@@ -37,10 +44,36 @@ accept-tools:
   - 'DIAMOND_AXE'
   - 'NETHERITE_AXE'
 
-accept-blocks:
+#  if you want to add a tree, you need to add leaf blocks and wood blocks.
+#  probably trees available from mods will work too.
+
+accept-wood-blocks:
   - 'OAK_LOG'
   - 'SPRUCE_LOG'
   - 'BIRCH_LOG'
   - 'JUNGLE_LOG'
   - 'ACACIA_LOG'
   - 'DARK_OAK_LOG'
+  - 'MANGROVE_LOG'
+  - 'MANGROVE_ROOTS'
+  - 'CHERRY_LOG'
+
+accept-leaves-blocks:
+  - 'OAK_LEAVES'
+  - 'SPRUCE_LEAVES'
+  - 'BIRCH_LEAVES'
+  - 'JUNGLE_LEAVES'
+  - 'ACACIA_LEAVES'
+  - 'DARK_OAK_LEAVES'
+  - 'MANGROVE_LEAVES'
+  - 'CHERRY_LEAVES'
+
+auto-plant-saplings:
+  - 'OAK_SAPLING'
+  - 'SPRUCE_SAPLING'
+  - 'BIRCH_SAPLING'
+  - 'JUNGLE_SAPLING'
+  - 'ACACIA_SAPLING'
+  - 'DARK_OAK_SAPLING'
+  - 'MANGROVE_PROPAGULE'
+  - 'CHERRY_SAPLING'
