--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,12 +1,12 @@
-# -----------------------------------------------#
-#  _______             _____      _              #
-# |__   __|           / ____|    | |             #
-#    | |_ __ ___  ___| |    _   _| |_ ___ _ __   #
-#    | | '__/ _ \/ _ \ |   | | | | __/ _ \ '__|  #
-#    | | | |  __/  __/ |___| |_| | ||  __/ |     #
-#    |_|_|  \___|\___|\_____\__,_|\__\___|_|     #
-#                                                #
-# -----------------------------------------------#
+#-------------------------------------------------#
+#   _______             _____      _              #
+#  |__   __|           / ____|    | |             #
+#     | |_ __ ___  ___| |    _   _| |_ ___ _ __   #
+#     | | '__/ _ \/ _ \ |   | | | | __/ _ \ '__|  #
+#     | | | |  __/  __/ |___| |_| | ||  __/ |     #
+#     |_|_|  \___|\___|\_____\__,_|\__\___|_|     #
+#                                                 #
+#-------------------------------------------------#
 
 # TreeCuter by Norbit4
 
@@ -19,22 +19,26 @@
 #               [Config]                #
 #---------------------------------------#
 
+# if true, only players with permission can cut down trees
 use-permissions: false
 permission: 'treecuter.use'
 
-max-tree-height: 20
+# max blocks to cut at once
+# only important for GIANT custom trees!
+max-blocks: 100
 
+# if true, the player must hold shift to cut down trees
 shift-mining: true
-accept-no-tools: false
 
 # mining effect works only with shift-mining enabled!
 apply-mining-effect: true
 effect-level: 2
 
+# cut blocks automatically go to player inventory
 items-to-inventory: false
 
 # automatically plants saplings that lie on the ground!
-auto-plant: true
+auto-plant: false
 
 accept-tools:
   - 'WOODEN_AXE'
@@ -43,9 +47,6 @@ accept-tools:
   - 'GOLDEN_AXE'
   - 'DIAMOND_AXE'
   - 'NETHERITE_AXE'
-
-#  if you want to add a tree, you need to add leaf blocks and wood blocks.
-#  probably trees available from mods will work too.
 
 accept-wood-blocks:
   - 'OAK_LOG'
@@ -57,16 +58,14 @@ accept-wood-blocks:
   - 'MANGROVE_LOG'
   - 'MANGROVE_ROOTS'
   - 'CHERRY_LOG'
-
-accept-leaves-blocks:
-  - 'OAK_LEAVES'
-  - 'SPRUCE_LEAVES'
-  - 'BIRCH_LEAVES'
-  - 'JUNGLE_LEAVES'
-  - 'ACACIA_LEAVES'
-  - 'DARK_OAK_LEAVES'
-  - 'MANGROVE_LEAVES'
-  - 'CHERRY_LEAVES'
+  - 'OAK_WOOD'
+  - 'SPRUCE_WOOD'
+  - 'BIRCH_WOOD'
+  - 'JUNGLE_WOOD'
+  - 'ACACIA_WOOD'
+  - 'DARK_OAK_WOOD'
+  - 'MANGROVE_WOOD'
+  - 'CHERRY_WOOD'
 
 auto-plant-saplings:
   - 'OAK_SAPLING'
