--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'java'
+    id 'com.github.johnrengelman.shadow' version '8.1.1'
 }
 
 group = 'pl.norbit'
@@ -20,6 +21,7 @@ repositories {
 dependencies {
     implementation files('src/main/resources/Jobs5.1.2.2.jar')
     compileOnly "io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT"
+    implementation 'io.github.skytasul:glowingentities:1.3.1'
 }
 
 compileJava {options.encoding = "UTF-8"}
