--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -34,6 +34,12 @@ shift-mining: true
 apply-mining-effect: true
 effect-level: 2
 
+# if true, blocks that have been cut off, will glow
+glowing-blocks: true
+# colors: black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray, dark_gray, blue, green
+#         aqua, red, magenta, light_purple, yellow, white
+glowing-color: 'red'
+
 # cut blocks automatically go to player inventory
 items-to-inventory: false
 
