--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: TreeCuter
-version: '${version}'
+version: '1.3.0'
 main: pl.norbit.treecuter.TreeCuter
-api-version: 1.19
+api-version: 1.17
 author: Norbit4
 website: 'https://n0rbit.pl'
 softdepend:
