--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,14 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven { url "https://maven.enginehub.org/repo/" }
 }
 
 dependencies {
     implementation files('src/main/resources/Jobs5.1.2.2.jar')
     compileOnly "io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT"
     implementation 'io.github.skytasul:glowingentities:1.3.1'
+    compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.8'
 }
 
 compileJava {options.encoding = "UTF-8"}
