--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@ repositories {
         url = "https://oss.sonatype.org/content/groups/public/"
     }
     maven { url "https://maven.enginehub.org/repo/" }
+    maven { url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -24,6 +25,7 @@ dependencies {
     compileOnly "io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT"
     implementation 'io.github.skytasul:glowingentities:1.3.1'
     compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.8'
+    compileOnly 'com.github.LoneDev6:API-ItemsAdder:3.5.0c-r5'
 }
 
 compileJava {options.encoding = "UTF-8"}
