--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: TreeCuter
-version: '1.3.0'
+version: '1.5.0'
 main: pl.norbit.treecuter.TreeCuter
 api-version: 1.17
 author: Norbit4
@@ -7,10 +7,11 @@ website: 'https://n0rbit.pl'
 softdepend:
   - Jobs
   - WorldGuard
+  - ItemsAdder
 commands:
   treecuter:
     permission: treecuter.admin
     aliases:
       - tc
-    description: TreeCuter command
-    usage: /treecuter [reload]
+    description: TreeCuter main command.
+    usage: /treecuter
