--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -52,26 +52,28 @@ max-blocks: 100
 min-blocks: 4
 
 # if true, the player must hold shift to cut down trees
-shift-mining: true
+shift-mining: true # true <- recommended
 
-# mining effect works only with shift-mining enabled!
-apply-mining-effect: true
-effect-level: 2
+# apply mining fatigue effect when player is cutting down trees
+# works only with shift-mining enabled!
+mining-effect:
+  enable: true # true <- recommended
+  default-level: 2
 
 # if true, blocks that have been cut off, will glow
 
-# [!]                                                                            [!]
-# [!] GLOWING - SUPPORTS PAPER OR FORKS VERSIONS: 1.17.1, 1.18.2, 1.19.4, 1.20.2 [!]
-# [!]                                                                            [!]
+# [!]                                                                                         [!]
+# [!] GLOWING - SUPPORTS ONLY PAPER OR FORKS VERSIONS: 1.17.1, 1.18.2, 1.19.4, 1.20.2, 1.20.4 [!]
+# [!]                                                                                         [!]
 
 glowing-blocks: true
-# colors: black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray, dark_gray, blue, green
-#         aqua, red, magenta, light_purple, yellow, white
+# colors: black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray,
+#         dark_gray, blue, green, aqua, red, magenta, light_purple, yellow, white
 glowing-color: 'red'
 
-# [!]                                                                            [!]
-# [!] GLOWING - SUPPORTS PAPER OR FORKS VERSIONS: 1.17.1, 1.18.2, 1.19.4, 1.20.2 [!]
-# [!]                                                                            [!]
+# [!]                                                                                         [!]
+# [!] GLOWING - SUPPORTS ONLY PAPER OR FORKS VERSIONS: 1.17.1, 1.18.2, 1.19.4, 1.20.2, 1.20.4 [!]
+# [!]                                                                                         [!]
 
 # cut blocks automatically go to player inventory
 items-to-inventory: false
