--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 apply plugin: 'maven-publish'
 
 group = 'pl.norbit'
-version = 'v1.7.1'
+version = 'v1.7.2'
 
 repositories {
     mavenCentral()
@@ -23,9 +23,15 @@ repositories {
 
 dependencies {
     compileOnly "io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT"
+
+    //libs
     implementation 'io.github.skytasul:glowingentities:1.3.4'
     compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.8'
     compileOnly 'com.github.LoneDev6:API-ItemsAdder:3.6.2-beta-r3-b'
+
+    //lombok
+    compileOnly 'org.projectlombok:lombok:1.18.26'
+    annotationProcessor 'org.projectlombok:lombok:1.18.26'
 }
 
 compileJava {options.encoding = "UTF-8"}
