--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
 apply plugin: 'maven-publish'
 
 group = 'pl.norbit'
-version = 'v1.7.2'
+version = 'v1.7.3'
 
 repositories {
     mavenCentral()
@@ -25,7 +25,7 @@ dependencies {
     compileOnly "io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT"
 
     //libs
-    implementation 'io.github.skytasul:glowingentities:1.3.4'
+    implementation 'fr.skytasul:glowingentities:1.3.5'
     compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.8'
     compileOnly 'com.github.LoneDev6:API-ItemsAdder:3.6.2-beta-r3-b'
 
