Add 1.21 glow support

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -11,7 +11,7 @@
 # TreeCuter by Norbit4
 
 # github: https://github.com/Norbit4
-# wiki: https://docs.n0rbit.pl/free-resource/treecuter
+# wiki: https://n0rbit.gitbook.io/english/free-resource/treecuter
 
 # If you like the plugin, support me with a positive opinion, thanks! <3
 
