--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'pl.norbit'
-version = 'v1.7.6'
+version = 'v1.8.0'
 
 repositories {
     mavenCentral()
@@ -23,6 +23,9 @@ repositories {
 dependencies {
     compileOnly "io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT"
 
+    //bstats
+    implementation 'org.bstats:bstats-bukkit:3.0.2'
+
     //libs
     implementation 'fr.skytasul:glowingentities:1.3.5'
     compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.8'
@@ -36,6 +39,10 @@ dependencies {
 compileJava {options.encoding = "UTF-8"}
 
 def targetJavaVersion = 17
+
+shadowJar {
+    relocate 'org.bstats', 'pl.norbit.treecuter'
+}
 
 java {
     toolchain {
