--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'pl.norbit'
-version = 'v1.8.0'
+version = 'v1.8.1'
 
 repositories {
     mavenCentral()
@@ -18,19 +18,24 @@ repositories {
     }
     maven { url "https://maven.enginehub.org/repo/" }
     maven { url 'https://jitpack.io' }
+    maven {
+        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
+    }
 }
 
 dependencies {
     compileOnly "io.papermc.paper:paper-api:1.19.4-R0.1-SNAPSHOT"
-
     //bstats
     implementation 'org.bstats:bstats-bukkit:3.0.2'
-
-    //libs
+    //glowing
     implementation 'fr.skytasul:glowingentities:1.3.5'
+    //worldguard
     compileOnly 'com.sk89q.worldguard:worldguard-bukkit:7.0.8'
+    //itemsadder
     compileOnly 'com.github.LoneDev6:API-ItemsAdder:3.6.2-beta-r3-b'
 
+    //placeholdrapi
+    compileOnly 'me.clip:placeholderapi:2.11.3'
     //lombok
     compileOnly 'org.projectlombok:lombok:1.18.26'
     annotationProcessor 'org.projectlombok:lombok:1.18.26'
