--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -7,6 +7,7 @@ website: 'https://github.com/Norbit4'
 softdepend:
   - WorldGuard
   - ItemsAdder
+  - PlaceholderAPI
 commands:
   treecuter:
     aliases:
