--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
 }
 
 group = 'pl.norbit'
-version = 'v1.8.8'
+version = 'v1.9.0'
 
 repositories {
     mavenCentral()
@@ -47,6 +47,7 @@ def targetJavaVersion = 17
 
 shadowJar {
     relocate 'org.bstats', 'pl.norbit.treecuter'
+    archiveClassifier.set("")
 }
 
 java {
