--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -61,25 +61,35 @@ mining-effect:
   default-level: 1
 
 # actions to execute after cutting down a tree
+#  {player} - player name
+#  {type}   - type of wood
+#  {count}  - amount of cut blocks
+#  {shape}  - shape id of cut tree
 actions:
   enable: false
-  # list of actions to execute
+  # list of commands to execute
   action-list:
-    - "say {player} cut a tree logs: {count}"
+    - "say {player} cut a tree logs: {type} {count} id: {shape}"
 
 # if true, blocks that have been cut off, will glow
 
+# [!]
 # [!]                                                                                                               [!]
-# [!] GLOWING - SUPPORTS ONLY PAPER OR FORKS VERSIONS: 1.17.1, 1.18.2, 1.19.4, 1.20.2, 1.20.4, 1.20.5, 1.20.6, 1.21 [!]
-# [!]                                                                                                               [!]                                                                                    [!]
+# [!]       GLOWING - SUPPORTS ONLY PAPER OR FORKS VERSIONS:                                                        [!]
+# [!]       1.17.1, 1.18.2, 1.19.4, 1.20.2, 1.20.4, 1.20.5, 1.20.6, 1.21-1.21.10                                    [!]
+# [!]                                                                                                               [!]
+# [!]                                                                                                               [!]                                                                                  [!]
 
 glowing-blocks: true
 # colors: black, dark_blue, dark_green, dark_aqua, dark_red, dark_purple, gold, gray,
 #         dark_gray, blue, green, aqua, red, magenta, light_purple, yellow, white
 glowing-color: 'yellow'
 
+# [!]
 # [!]                                                                                                               [!]
-# [!] GLOWING - SUPPORTS ONLY PAPER OR FORKS VERSIONS: 1.17.1, 1.18.2, 1.19.4, 1.20.2, 1.20.4, 1.20.5, 1.20.6, 1.21 [!]
+# [!]       GLOWING - SUPPORTS ONLY PAPER OR FORKS VERSIONS:                                                        [!]
+# [!]       1.17.1, 1.18.2, 1.19.4, 1.20.2, 1.20.4, 1.20.5, 1.20.6, 1.21-1.21.10                                    [!]
+# [!]                                                                                                               [!]
 # [!]                                                                                                               [!]
 
 # cut blocks automatically go to player inventory
